[package]
name = "wol"
version = "0.1.0"
edition = "2018"
authors = ["FENG Yingcai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wol"
path = "src/lib.rs"
doc = true

[[bin]]
name = "wol"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "3", features = ["derive"]}