[package]
name = "wol-rs"
version = "0.9.1"
edition = "2021"
authors = ["fengyingcai <fengyc.work@gmail.com>"]
description = "Wake-on-LAN utility"
homepage = "https://github.com/fengyc/wol-rs"
repository = "https://github.com/fengyc/wol-rs"
readme = "README.md"
keywords = ["wol", "wake-on-lan"]
categories = ["network-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wol"
path = "src/lib.rs"
doc = true

[[bin]]
name = "wol"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "3", features = ["derive"] }

[profile.release]
strip = true