[package]
name = "wol-rs"
version = "1.1.1"
edition = "2021"
authors = ["fengyingcai <fengyc.work@gmail.com>"]
description = "Wake-on-LAN utility"
homepage = "https://github.com/fengyc/wol-rs"
repository = "https://github.com/fengyc/wol-rs"
readme = "README.md"
keywords = ["wol", "wake-on-lan"]
categories = ["network-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wol"
path = "src/lib.rs"
doc = true

[[bin]]
name = "wol"
path = "src/main.rs"
doc = false
required-features = ["bin"]

[features]
bin = ["dep:clap"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"], optional = true }
eui48 = { version = "1.1.0", features = ["disp_hexstring"] }

[profile.release]
strip = true

[dev-dependencies]
rstest = "0.25.0"   
